# visionkit

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  renovate.json
.github/workflows/: ci-integration.yml  ci-security.yml  ci-unit.yml  publish.yml  renovate.yml  reusable-github-release.yml  semantic-release.yml  semantic-versioning.yml
.memsearch/memory/: 2026-06-17.md  2026-06-19.md  2026-06-23.md
docs/superpowers/plans/: 2026-06-09-visionkit-utility-methods.md
docs/superpowers/specs/: 2026-06-09-visionkit-utility-methods-design.md
openvisionkit/capture/: screen_capture.py  video_recorder.py  video_template.py
openvisionkit/lib/: classifier.py  face_mesh_detector.py  form_detector.py  form_roi_annotator.py  form_roi_detector.py  fps_counter.py  hand_detector.py  image_detector.py  selfie_segmentation.py  text_detector.py
openvisionkit/lib/models/: pose_landmarker.task
openvisionkit/utility/: vision_utilis.py
tests/: conftest.py
tests/capture/: test_video_capture_template.py
tests/lib/: test_face_detector.py  test_face_mesh_detector.py  test_form_roi_annotator.py  test_form_roi_detector.py  test_hair_segmentation.py  test_hand_detector.py  test_image_detector.py  test_object_detector.py  test_pose_detector.py  test_selfie_segmentation.py  test_text_detector.py
visionkit/: _version.py
visionkit/capture/: draw_object.py  image_template.py  video_template.py
visionkit/lib/: face_detector.py  face_mesh_detector.py  hair_segmentation.py  hand_detector.py  image_detector.py  object_detector.py  pose_detector.py  selfie_segmentation.py  text_detector.py
visionkit/lib/models/: deeplabv3_plus_mobilenet.tflite  face_landmarker_v2_with_blendshapes.task  interactive_segmenter.tflite  ssd_mobilenet_v2_coco.tflite
visionkit/utility/: live_plot.py
